biscuit-terminal/lib/tests/snapshots/layout_matrix__Compose__left_margin_pct_10.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
        First line of composed output.Second line of composed output.
---
VIA_TREE_DIRECT
        First line of composed output.Second line of composed output.
